tried to fix header image on mobile but failed

--- a/semester8/advancedcss/zengarden/styles.css
+++ b/semester8/advancedcss/zengarden/styles.css
@@ -109,6 +109,7 @@ header {
   grid-column: 1/4;
   grid-row: 1/2;
   background-image: url("hawaiian-gardenia2.jpg");
+  background-repeat: no-repeat;
   background-color: #cccccc;
   color: white;
 }
